# CodexDocker-Setup

./: .env.example  .gitignore  AGENTS.md  Dockerfile_cuda129  Dockerfile_cuda130  Dockerfile_minimal  PORTS_SKILL.md  README.md  README_dockercommands.md  README_setupWindows.md  package-lock.json  package.json  skills-architecture.md  tmux.conf
DockerWithPyEnv/: Dockerfile  (+2 more)
others/exampleCodexProject-Filled/: AGENTS.md  PROJECT.md  README.md  SEEMYCITATIONS_COMPLETIONTRACKER.md  SEEMYCITATIONS_GOALS.md  TimeTaken.md  package-lock.json  package.json  pyproject.toml  update_timetaken.sh
others/exampleCodexProject-Filled/artifacts/ui/run-20260720-01/: playwright_capture_author_to_keyword_evidence_report.json
others/exampleCodexProject-Filled/artifacts/ui/run-20260720-02/: playwright_capture_live_mehul_motani_library_report.json
others/exampleCodexProject-Filled/artifacts/ui/run-20260720-03/: playwright_capture_automatic_keyword_pdf_reader_report.json
others/exampleCodexProject-Filled/data/authors/openalex_A5053162426/: index.json
others/exampleCodexProject-Filled/data/authors/openalex_A5068845707/: index.json
others/exampleCodexProject-Filled/data/uploads/: documents.json
others/exampleCodexProject-Filled/src/seemycitations/: __init__.py  config.py  errors.py  main.py  models.py
others/exampleCodexProject-Filled/tests/: test_api.py  test_author_library.py  test_cache.py  test_documents.py  test_foundation.py  test_keyword_extraction.py  test_keywords.py  test_openalex.py  test_ui_contract.py  ui_capture.js  ui_keyword_reader.js  ui_live_mehul_motani.js
(+102 files in other folders)
