[project]
name = "seemycitations"
version = "0.1.0"
description = "Local scholarly citation and authorized PDF keyword explorer"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116,<1",
    "httpx>=0.28,<1",
    "jinja2>=3.1,<4",
    "pymupdf>=1.26,<2",
    "python-multipart>=0.0.20,<1",
    "uvicorn[standard]>=0.35,<1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/seemycitations"]

[dependency-groups]
dev = [
    "pytest>=8.4,<9",
    "pytest-asyncio>=1.1,<2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
